iPhone/iPad fix: Dark mode auto button padding

--- a/src/app/components/appbar/appbar.component.scss
+++ b/src/app/components/appbar/appbar.component.scss
@@ -26,6 +26,7 @@
             background-color: var(--text);
             color: var(--fons);
             font-weight: 800;
+            padding: initial; // iPhone/iPad fix //
             border: none;
             border-radius: 1000px;
             outline: none;
